# ryan-agent-os

./: .env.example  Makefile  README.md  docker-compose.yml  manifest.json  package-lock.json  package.json
docs/: 00_INDEX.md  03_USERS_AND_JOBS.md  04_SCOPE_AND_REQUIREMENTS.md  05_SYSTEM_ARCHITECTURE.md  06_DOMAIN_AND_DATA_MODEL.md  07_AGENT_ARCHITECTURE.md  08_CORE_WORKFLOWS.md  09_API_CONTRACTS.md  10_INTEGRATIONS.md  11_SECURITY_PRIVACY.md  12_MEMORY_AND_CONTEXT.md  14_OBSERVABILITY_AND_EVALUATION.md  15_DEPLOYMENT_AND_OPERATIONS.md  16_TEST_STRATEGY.md  17_ROADMAP.md  18_MVP_BACKLOG.md  21_IMPLEMENTATION_STATUS.md  23_TDD_AND_LOOP_ENGINEERING.md  27_PROJECT_MAP.md  (+4 more)
foundation/apps/api/: pyproject.toml
foundation/apps/api/alembic/: env.py
foundation/apps/api/alembic/versions/: 0005_execution_packs.py
foundation/apps/api/app/: contracts.py  main.py
foundation/apps/api/app/api/: deps.py  router.py
foundation/apps/api/app/api/v1/routes/: captures.py  health.py  projects.py  task_graphs.py
foundation/apps/api/app/core/: auth.py
foundation/apps/api/app/db/: base.py
foundation/apps/api/app/models/: __init__.py  capture.py  embedding.py
foundation/apps/api/app/schemas/: auth.py  execution_pack.py  task_graph.py
foundation/apps/api/app/services/: classifier.py  embeddings.py  related.py  source.py  workspace.py
foundation/apps/api/tests/: test_auth.py  test_captures.py  test_embeddings.py  test_execution_packs.py  test_hybrid_related.py  test_implementation_queue.py  test_model_gateway.py  test_projects.py  test_retry_and_relations.py  test_uuid7.py
(+194 files in other folders)
