[project]
name = "ryan-agent-os-api"
version = "0.4.0"
description = "Ryan Agent OS API"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "pgvector.*"]
ignore_missing_imports = true
